...
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:gravity="center"-->
        <!--            android:text="Class 3" />-->
    </LinearLayout>
    <Button
        android:id="@+id/homeScreenButton"
        android:layout_width="133dp"
        android:layout_height="85dp"
        android:text="Home Screen Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />
...
